--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>{{ page.title }}</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+  
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Mona S</a></li>
+	        	<li><a href="/cv">CV</a></li>
+        		<li><a href="/showcase-art">Art Portfolio</a></li>
+            <li><a href="/showcase-design">Webdesign Showcase</a></li>
+            <li><a href="/contact">Contact</a></li>
+        		<li><a href="/about">What is this site?</a></li>
+    		</ul>
+		</nav>
+    
+    <div class="main">
+      <div class="container">
+          {{ content }}
+      </div>
+     </div>
+		<footer>
+      <div class="container">
+    	  <ul>
+        		<li><a href="mailto:nooomoonmoon@gmail.com">email</a></li>
+        		<li><a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a></li>
+			  </ul>
+      </div>
+		</footer>
+	</body>
+</html>
