--- a/css/main.css
+++ b/css/main.css
@@ -1,73 +1,71 @@
-html, body {
-    margin: 0;
-	padding: 0;
-		    }
-body {
-	font-family: 'Roboto', sans-serif;
-	fontweight: 20;
-	}
+			html, body {
+				margin: 0;
+				padding: 0;
+				}
+				
+				body {
+				font-family: 'Roboto', sans-serif;
+				fontweight: 20;
+				}
+				
+				.btn {
+					color: #fff;
+					background: #000;
+					padding: 10px 40px;
+					text-decoration: none;
+					transition: background .2s;
+				}
+				
+				.container {
+				margin: 0 auto; 
+				max-width: 800px;
+				padding: 0 10px;
+				}
 
-nav ul, footer ul {
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    width: 100%;
-    background-color: #333
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
+				.navbar {
+					overflow: hidden;
+					background-color: #333;
+					position: fixed;
+					top: 0;
+					width: 100%;
+				}
+				
+				.navbar a {
+					float: left;
+					display: block;
+					font-family: "Arial Black", Gadget, sans-serif;
+					color: #ffffff
+					text-align: center;
+					padding: 14px 19px;
+					text-decoration: none;
+					font-size: 17px;
+				}
+				
+				.navbar a:hover {
+					background: #fff;
+					color: black;
+				}
+				
+				.header .container {
+					position: relative;
+					top: 25%;
+				}
+				
+				.main {
+					padding: 34px;
+					margin-top: 70px;
+				}
+				
+				.footer { 
+					background: #000;
+					height: 80px; 
+					padding-bottom: 50px;
+				}
 
-
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-    display: block;
-    text-align: center;
-    color: #ffffff;
-    font-family: "Arial Black", Gadget, sans-serif;
-}
-
-a:hover {
-    text-decoration: underline;
-    background: #fff;
-    color: black;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-
-footer {
-    background: #000;
-    height: 80px;
-    font-size: .8em;
-    padding-bottom: 50px;
-}
-
-footer p {
-    color: #fff;
-    font-size: 14px;
-    height: 80px;
-    line-height: 80px;
-    margin: 0;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
-}
+				.footer p { 
+					color: #fff;
+					font-size: 14px;  
+					height: 80px; 
+					line-height: 80px;
+					margin: 0;  
+				}
