--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,29 +6,38 @@
 	</head>
   
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Mona S</a></li>
-	        	<li><a href="/cv">CV</a></li>
-        		<li><a href="/showcase-art">Art Portfolio</a></li>
-            <li><a href="/showcase-design">Webdesign Showcase</a></li>
-            <li><a href="/contact">Contact</a></li>
-        		<li><a href="/about">What is this site?</a></li>
-    		</ul>
-		</nav>
-    
-    <div class="main">
-      <div class="container">
-          {{ content }}
-      </div>
-     </div>
+	
+		<div class="navbar">
+			<div class="container">
+				<a href="home">Mona Schappert</a>
+				<a href="cv">CV</a>
+				<a href="showcase-art">Art Portfolio</a>
+				<a href="showcase-webdesign">Webdesign Showcase</a>
+				<a href="contact">Contact</a>
+			</div>
+		</div>
+		
+		<div class="header">
+			<div class="container">
+			</div>
+		</div>
+		
+		<div id="about"></div>
+		<div id="art"></div>
+		<div id="design"></div>
+		
+    		<div class="main">
+      			<div class="container">
+          			{{ content }}
+      			</div>
+     		</div>
 		<footer>
-      <div class="container">
-    	  <ul>
-        		<li><a href="mailto:nooomoonmoon@gmail.com">email</a></li>
-        		<li><a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a></li>
-			  </ul>
-      </div>
+      			<div class="container">
+    	  			<ul>
+        				<li><a href="mailto:nooomoonmoon@gmail.com">email</a></li>
+        				<li><a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a></li>
+			  	</ul>
+      			</div>
 		</footer>
 	</body>
 </html>
