--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,11 +30,9 @@
      		</div>
 		<footer>
       			<div class="container">
-    	  			<ul>
-        				<li><a href="mailto:nooomoonmoon@gmail.com">email</a></li>
-        				<li><a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a></li>
-			  	</ul>
-      			</div>
+    	  			<a href="mailto:nooomoonmoon@gmail.com">email</a>
+        			<a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a>
+			</div>
 		</footer>
 	</body>
 </html>
