--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,12 @@
 	
 		<div class="navbar">
 			<div class="container">
-				<a href="home">Mona Schappert</a>
-				<a href="cv">CV</a>
-				<a href="showcase-art">Art Portfolio</a>
-				<a href="showcase-webdesign">Webdesign Showcase</a>
-				<a href="contact">Contact</a>
+				<a href="/home">Mona S</a>
+				<a href="/cv">CV</a>
+				<a href="/showcase-art">Art Portfolio</a>
+				<a href="/showcase-webdesign">Webdesign Showcase</a>
+				<a href="/contact">Contact</a>
+				<a href="/about">What is this site?</a>
 			</div>
 		</div>
 		
