--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	
 		<div class="navbar">
 			<div class="container">
-				<a href="/home">Mona S</a>
+				<a href="/">Mona S</a>
 				<a href="/cv">CV</a>
 				<a href="/showcase-art">Art Portfolio</a>
 				<a href="/showcase-webdesign">Webdesign Showcase</a>
