--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,11 @@
           			{{ content }}
       			</div>
      		</div>
-		<footer>
+		<div class="footer">
       			<div class="container">
     	  			<a href="mailto:nooomoonmoon@gmail.com">email</a>
         			<a href="https://github.com/nooomoonmoon">github.com/nooomoonmoon</a>
 			</div>
-		</footer>
+		</div>
 	</body>
 </html>
