--- a/css/main.css
+++ b/css/main.css
@@ -59,8 +59,12 @@
 				.footer { 
 					position: fixed;
 					background: #000;
+					width: 100%;
+					top: 0;
+					left: 0;
 					height: 20%; 
 					padding-bottom: 30%;
+					text-align: center;
 				}
 
 				.footer p { 
@@ -68,5 +72,5 @@
 					font-size: 14px;  
 					height: 80px; 
 					line-height: 80px;
-					margin: 0;  
+					margin: 13%;  
 				}
