--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@
 					position: fixed;
 					background: #000;
 					width: 100%;
-					top: 0;
+					bottom: 0;
 					left: 0;
 					height: 20%; 
 					padding-bottom: 30%;
